# agent-filter

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_filter/: __init__.py  core.py
src/agent_filter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agent_filter.py
